# AutoSQL

./: Dockerfile  docker-compose.yml  pyproject.toml
api/demo/: autosql_demo.py  data_model.py  main.py
notebooks/playground/: autosql_langchain.ipynb
