[tool.poetry]
name = "autosql"
version = "0.1.0"
description = "AutoSQL built over large language models and langchain"
authors = ["Simrat Hanspal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.177"
openai = "^0.27.7"
SQLAlchemy = "^2.0.15"
fastapi = "^0.95.2"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
